--- a/oap-stdlib/src/test/resources/oap/application/remote/RemoteTest/application.conf
+++ b/oap-stdlib/src/test/resources/oap/application/remote/RemoteTest/application.conf
@@ -7,7 +7,10 @@ profiles = [
 
 services {
   oap {
-    oap-http-server.parameters.port = ${HTTP_PORT}
+    oap-http-server.parameters {
+      defaultPort.httpPort = ${HTTP_PORT}
+      additionalHttpPorts.httpprivate = ${HTTP_PORT}
+    }
     remoting.parameters.serialization = JSON
     remoting.parameters.private_network = true
   }
