--- a/oap-stdlib/src/main/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.conf
@@ -19,7 +19,7 @@ services {
       defaultPort {
         httpPort = 8080
 //        httpsPort = 8443
-//        jksLocation = /path
+//        keyStore = /path
 //        password = ...
       }
       additionalHttpPorts {
