--- a/oap-stdlib/src/test/resources/oap/http/server/nio/NioHttpServerTest/test-application.conf
+++ b/oap-stdlib/src/test/resources/oap/http/server/nio/NioHttpServerTest/test-application.conf
@@ -8,7 +8,7 @@ services {
       defaultPort {
         httpPort = ${TEST_HTTP_PORT}
         httpsPort = ${TEST_HTTPS_PORT}
-        keyStore = ${TEST_DIRECTORY}/master.jks
+        keyStore = classpath(/oap/http/test_https.jks)
         password = ${TEST_PASSWORD}
       }
       additionalHttpPorts.httpprivate = ${TEST_HTTP_PORT}
