--- a/oap-stdlib/src/test/resources/oap/http/server/nio/health/HealthHttpHandlerTest/application.test.conf
+++ b/oap-stdlib/src/test/resources/oap/http/server/nio/health/HealthHttpHandlerTest/application.test.conf
@@ -3,7 +3,7 @@ profile = http
 services {
   oap {
     oap-http-server.parameters {
-      defaultPort.port = ${TEST_HTTP_PORT}
+      defaultPort.httpPort = ${TEST_HTTP_PORT}
       additionalHttpPorts.httpprivate = ${TEST_HTTP_PORT}
     }
     oap-http-health-handler.parameters.secret = secret
