--- a/oap-stdlib/src/test/resources/oap/message/MessageServerTest/application.test.conf
+++ b/oap-stdlib/src/test/resources/oap/message/MessageServerTest/application.test.conf
@@ -9,7 +9,7 @@ profiles = [
 services {
   oap {
     oap-http-server.parameters {
-      defaultPort.port = ${TEST_HTTP_PORT}
+      defaultPort.httpPort = ${TEST_HTTP_PORT}
       additionalHttpPorts.httpprivate = ${TEST_HTTP_PORT}
     }
     oap-http-message-sender.parameters {
