--- a/oap-stdlib/src/main/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.conf
@@ -111,7 +111,7 @@ services {
       context = /remote/
       serialization = DEFAULT
       kernel = kernel.self
-//      port = httpprivate
+      port = httpprivate
     }
     supervision.supervise = true
   }
