--- a/oap-stdlib/src/main/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.conf
@@ -16,7 +16,15 @@ services {
     profile = http
     implementation = oap.http.server.nio.NioHttpServer
     parameters {
-      //      port = 8080
+      defaultPort {
+        httpPort = 8080
+//        httpsPort = 8443
+//        keyStore = /path
+//        password = ...
+      }
+      additionalHttpPorts {
+        httpprivate = 8081
+      }
 
       backlog = -1
       idleTimeout = -1
@@ -43,7 +51,7 @@ services {
     parameters {
       server = modules.this.oap-http-server
       prefix = /healtz
-      port = 8081
+      port = httpprivate
       providers = []
     }
 
@@ -58,7 +66,7 @@ services {
     implementation = oap.message.MessageHttpHandler
     parameters {
       server = modules.this.oap-http-server
-      port = 8081
+      port = httpprivate
       clientHashCacheSize = 1024
       hashTtl = 6h
       context = /messages
@@ -82,7 +90,7 @@ services {
       keepAliveDuration = 30d
       poolSize = -1
       storageLockExpiration = 1h
-      port = 8080
+      port = 8081
 
       //      host = <unknown>
       httpPrefix = /messages
@@ -103,7 +111,7 @@ services {
       context = /remote/
       serialization = DEFAULT
       kernel = kernel.self
-//      port = 8081
+      port = httpprivate
     }
     supervision.supervise = true
   }
@@ -112,7 +120,7 @@ services {
     profiles = prometheus
     implementation = oap.prometheus.PrometheusExporter
     parameters {
-      port = 8081
+      port = httpprivate
       server = modules.this.oap-http-server
       uuid = 18888a3e-2986-4431-98ed-437cefda5e86
     }
