--- a/oap-stdlib/src/test/resources/oap/message/MessageServerTest/application.test.conf
+++ b/oap-stdlib/src/test/resources/oap/message/MessageServerTest/application.test.conf
@@ -8,16 +8,19 @@ profiles = [
 
 services {
   oap {
-    oap-http-server.parameters.port = ${TEST_HTTP_PORT}
+    oap-http-server.parameters {
+      defaultPort.httpPort = ${TEST_HTTP_PORT}
+      additionalHttpPorts.httpprivate = ${TEST_HTTP_PORT}
+    }
     oap-http-message-sender.parameters {
       host = localhost
       port = ${TEST_HTTP_PORT}
       persistenceDirectory = ${TEST_DIRECTORY}/opt/oap/messages/sender
     }
     oap-http-message-handler.parameters {
-      port = ${TEST_HTTP_PORT}
       controlStatePath = ${TEST_DIRECTORY}/opt/oap/messages/server
       clientHashCacheSize = 2048
     }
+
   }
 }
