PLT-914 move testcontainer to test scope

--- a/oap-hadoop/pom.xml
+++ b/oap-hadoop/pom.xml
@@ -63,6 +63,7 @@
                     <artifactId>slf4j-api</artifactId>
                 </exclusion>
             </exclusions>
+            <scope>test</scope>
         </dependency>
 
 
