--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,15 @@
 
     <repositories>
         <repository>
+            <id>central</id>
+            <name>Maven Central</name>
+            <layout>default</layout>
+            <url>https://repo1.maven.org/maven2</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
             <id>oap</id>
             <url>https://artifacts.oaplatform.org/repository/maven/</url>
         </repository>
