--- a/oap-stdlib/pom.xml
+++ b/oap-stdlib/pom.xml
@@ -406,7 +406,7 @@
         <dependency>
             <groupId>net.openhft</groupId>
             <artifactId>affinity</artifactId>
-            <version>${oap.deps.affinity}</version>
+            <version>${oap.deps.affinity.version}</version>
         </dependency>
         <dependency>
             <groupId>org.mock-server</groupId>
