--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <module>oap-jpath</module>
         <module>oap-pnio</module>
         <module>oap-hadoop</module>
-        <module>maven</module>
+        <module>oap-maven-plugin</module>
     </modules>
 
     <repositories>
