--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -45,7 +44,7 @@
     </repositories>
 
     <properties>
-        <oap.project.version>21.1.5</oap.project.version>
+        <oap.project.version>21.1.6</oap.project.version>
 
         <oap.deps.config.version>21.0.0</oap.deps.config.version>
 
@@ -58,7 +57,7 @@
         <oap.deps.logback.version>1.4.14</oap.deps.logback.version>
         <oap.deps.slf4j.version>2.0.9</oap.deps.slf4j.version>
 
-        <oap.deps.mockito.version>4.11.0</oap.deps.mockito.version>
+        <oap.deps.mockito.version>5.3.1</oap.deps.mockito.version>
 
         <oap.deps.okhttp.version>4.11.0</oap.deps.okhttp.version>
         <oap.deps.apache.httpcomponents.version>4.4.16</oap.deps.apache.httpcomponents.version>
