--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <module>oap-jpath</module>
         <module>oap-pnio</module>
         <module>oap-hadoop</module>
-        <module>maven</module>
+        <module>oap-maven-plugin</module>
     </modules>
 
     <repositories>
@@ -45,7 +45,7 @@
     </repositories>
 
     <properties>
-        <oap.project.version>21.1.5</oap.project.version>
+        <oap.project.version>21.1.6</oap.project.version>
 
         <oap.deps.config.version>21.0.0</oap.deps.config.version>
 
