--- a/oap-stdlib/pom.xml
+++ b/oap-stdlib/pom.xml
@@ -188,15 +188,9 @@
             <version>${oap.deps.luben-zstd-jni.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.github.rholder</groupId>
-            <artifactId>guava-retrying</artifactId>
+            <groupId>io.github.itning</groupId>
+            <artifactId>guava-retrying3</artifactId>
             <version>${oap.deps.guava-retrying.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.google.code.findbugs</groupId>
-                    <artifactId>jsr305</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.jasonclawson</groupId>
