testcontainers, testng -> scope: provided

--- a/oap-hadoop/pom.xml
+++ b/oap-hadoop/pom.xml
@@ -90,7 +90,7 @@
             <groupId>org.testcontainers</groupId>
             <artifactId>testcontainers</artifactId>
             <version>${oap.deps.testcontainers.version}</version>
-            <scope>test</scope>
+            <scope>provided</scope>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
