oap-stdlib -> oap-stdlib + oap-stdlib-test

--- a/oap-stdlib-test/src/test/resources/META-INF/json-ext.properties
+++ b/oap-stdlib-test/src/test/resources/META-INF/json-ext.properties
@@ -21,4 +21,4 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 #
-oap.json.ext.json.ClassLocalExtDeserializerTest$Bean$BeanExt=oap.json.ext.ClassLocalExtDeserializerTest$TestExt
+oap.json.ext.ClassLocalExtDeserializerTest$Bean$BeanExt=oap.json.ext.ClassLocalExtDeserializerTest$TestExt
