oap-hadoop -> oap-hadoop + oap-hadoop-test

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>oap-jpath</module>
         <module>oap-pnio</module>
         <module>oap-hadoop</module>
+        <module>oap-hadoop-test</module>
         <module>oap-maven-plugin</module>
     </modules>
 
