--- a/oap-stdlib/src/main/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.conf
@@ -12,6 +12,23 @@ services {
     implementation = oap.time.JodaTimeService
   }
 
+  nio-bandwidth-handler {
+    profile = nio-bandwidth-handler
+    implementation = oap.http.server.nio.handlers.BandwidthHandler
+  }
+
+  nio-compression-handler {
+    profile = nio-compression-handler
+    implementation = oap.http.server.nio.handlers.CompressionNioHandler
+  }
+
+  blocking-read-timeout-handler {
+    implementation = oap.http.server.nio.handlers.BlockingReadTimeoutHandler
+    parameters {
+      readTimeout = 60s
+    }
+  }
+
   oap-http-server {
     profile = http
     implementation = oap.http.server.nio.NioHttpServer
@@ -28,7 +45,6 @@ services {
 
       backlog = -1
       idleTimeout = -1
-      readTimeout = 60s
       tcpNodelay = true
       ioThreads = -1
       workerThreads = -1
@@ -37,10 +53,15 @@ services {
       maxHeaders = -1
       maxHeaderSize = -1
       statistics = false
-      forceCompressionSupport = false
 
       alwaysSetDate = true
       alwaysSetKeepAlive = true
+
+      handlers = [
+        modules.this.nio-bandwidth-handler
+        modules.this.nio-compression-handler
+        modules.this.blocking-read-timeout-handler
+      ]
     }
     supervision.supervise = true
   }
