--- a/oap-stdlib/src/main/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.conf
@@ -15,6 +15,8 @@ services {
   nio-bandwidth-handler {
     profile = nio-bandwidth-handler
     implementation = oap.http.server.nio.handlers.BandwidthHandler
+
+    supervision.supervise = true
   }
 
   nio-compression-handler {
