--- a/oap-hadoop/pom.xml
+++ b/oap-hadoop/pom.xml
@@ -2,6 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
+    <packaging>pom</packaging>
+
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
@@ -10,7 +12,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>oap-hadoop-parent</artifactId>
-    <packaging>pom</packaging>
+    <name>oap-hadoop-parent</name>
 
     <modules>
         <module>oap-hadoop</module>
