--- a/oap-hadoop/oap-hadoop-test/pom.xml
+++ b/oap-hadoop/oap-hadoop-test/pom.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>oap</groupId>
-        <artifactId>oap</artifactId>
+        <artifactId>oap-hadoop-parent</artifactId>
         <version>${oap.project.version}</version>
     </parent>
 
-    <modelVersion>4.0.0</modelVersion>
     <artifactId>oap-hadoop-test</artifactId>
 
     <dependencies>
