--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>oap-jpath</module>
         <module>oap-pnio</module>
         <module>oap-hadoop</module>
+        <module>oap-formats</module>
         <module>oap-maven-plugin</module>
     </modules>
 
@@ -45,7 +46,7 @@
     </repositories>
 
     <properties>
-        <oap.project.version>21.3.2</oap.project.version>
+        <oap.project.version>21.3.3</oap.project.version>
 
         <oap.deps.config.version>21.0.0</oap.deps.config.version>
 
