--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>oap-template</module>
         <module>oap-alert-slack</module>
         <module>oap-jpath</module>
+        <module>oap-message</module>
         <module>oap-pnio</module>
         <module>oap-hadoop</module>
         <module>oap-formats</module>
@@ -46,7 +47,7 @@
     </repositories>
 
     <properties>
-        <oap.project.version>21.3.4</oap.project.version>
+        <oap.project.version>21.4.0</oap.project.version>
 
         <oap.deps.config.version>21.0.0</oap.deps.config.version>
 
