OAP-219 Move oap-application-cli to a separate module

--- a/oap-application/pom.xml
+++ b/oap-application/pom.xml
@@ -12,8 +12,9 @@
     <artifactId>oap-application-parent</artifactId>
 
     <modules>
-        <module>oap-application</module>
+        <module>oap-application-cli</module>
         <module>oap-application-annotation</module>
+        <module>oap-application</module>
         <module>oap-application-test</module>
     </modules>
 </project>
