--- a/oap-application/oap-application/pom.xml
+++ b/oap-application/oap-application/pom.xml
@@ -18,6 +18,11 @@
         </dependency>
         <dependency>
             <groupId>oap</groupId>
+            <artifactId>oap-application-cli</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>oap</groupId>
             <artifactId>oap-application-annotation</artifactId>
             <version>${project.version}</version>
         </dependency>
