--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
         <oap.project.version>21.6.2</oap.project.version>
 
         <oap.deps.config.version>21.0.0</oap.deps.config.version>
-        <oap.deps.oap-teamcity.version>21.0.1.OAP-222-oap-teamcity.3</oap.deps.oap-teamcity.version>
+        <oap.deps.oap-teamcity.version>21.0.1.OAP-222-oap-teamcity.13</oap.deps.oap-teamcity.version>
 
         <oap.deps.testng.version>7.8.0</oap.deps.testng.version>
         <oap.deps.assertj.version>3.24.2</oap.deps.assertj.version>
@@ -149,7 +149,7 @@
         <dependency>
             <groupId>oap</groupId>
             <artifactId>oap-teamcity-testng</artifactId>
-            <version>21.0.1.OAP-222-oap-teamcity.5</version>
+            <version>${oap.deps.oap-teamcity.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -159,7 +159,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M7</version>
+                <version>${oap.deps.maven.surefire.version}</version>
 
                 <configuration>
                     <properties>
