--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,10 @@
                 <configuration>
                     <properties>
                         <property>
+                            <name>junit</name>
+                            <value>false</value>
+                        </property>
+                        <property>
                             <name>usedefaultlisteners</name>
                             <value>false</value> <!-- disabling default listeners is optional -->
                         </property>
