--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap.maven</artifactId>
-        <version>21.1.1</version>
+        <version>21.1.3</version>
     </parent>
 
     <packaging>pom</packaging>
@@ -47,18 +47,11 @@
         </repository>
     </repositories>
 
-    <pluginRepositories>
-        <pluginRepository>
-            <id>oap</id>
-            <url>https://artifacts.oaplatform.org/repository/maven/</url>
-        </pluginRepository>
-    </pluginRepositories>
-
     <properties>
         <oap.project.version>21.6.2</oap.project.version>
 
         <oap.deps.config.version>21.0.0</oap.deps.config.version>
-        <oap.deps.oap-teamcity.version>21.0.1.OAP-222-oap-teamcity.21</oap.deps.oap-teamcity.version>
+        <oap.deps.oap-teamcity.version>21.0.1</oap.deps.oap-teamcity.version>
 
         <oap.deps.testng.version>7.8.0</oap.deps.testng.version>
         <oap.deps.assertj.version>3.24.2</oap.deps.assertj.version>
