--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>oap-hadoop</module>
         <module>oap-formats</module>
         <module>oap-mail</module>
+        <module>oap-highload</module>
         <module>oap-maven-plugin</module>
     </modules>
 
@@ -49,7 +50,7 @@
     </repositories>
 
     <properties>
-        <oap.project.version>21.7.0</oap.project.version>
+        <oap.project.version>21.8.0</oap.project.version>
 
         <oap.deps.config.version>21.0.0</oap.deps.config.version>
         <oap.deps.oap-teamcity.version>21.0.1</oap.deps.oap-teamcity.version>
