--- a/oap-stdlib-test/pom.xml
+++ b/oap-stdlib-test/pom.xml
@@ -57,13 +57,25 @@
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>${oap.deps.assertj.version}</version>
+            <version>3.25.3</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>net.bytebuddy</groupId>
+                    <artifactId>byte-buddy</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+            <version>1.14.11</version>
         </dependency>
 
         <dependency>
             <groupId>org.mock-server</groupId>
             <artifactId>mockserver-netty</artifactId>
-            <version>${oap.deps.mockserver-netty.version}</version>
+            <version>5.15.0</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
