OAP-227 Close long lived connections when they have handled X requests

--- a/oap-stdlib/src/main/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.conf
@@ -31,6 +31,13 @@ services {
     }
   }
 
+  keepalive-requests-handler {
+    implementation = oap.http.server.nio.handlers.KeepaliveRequestsHandler
+    parameters {
+      keepaliveRequests = 1000
+    }
+  }
+
   oap-http-server {
     profile = http
     implementation = oap.http.server.nio.NioHttpServer
@@ -60,6 +67,7 @@ services {
       alwaysSetKeepAlive = true
 
       handlers = [
+        modules.this.keepalive-requests-handler
         modules.this.nio-bandwidth-handler
         modules.this.nio-compression-handler
         modules.this.blocking-read-timeout-handler
