OAP-217 remove module oap-application-annotation

--- a/oap-application/oap-application-test/src/test/resources/oap/application/KernelLinkImplementationsTest/creference.conf
+++ b/oap-application/oap-application-test/src/test/resources/oap/application/KernelLinkImplementationsTest/creference.conf
@@ -3,17 +3,17 @@ name = creference
 services {
   links {
     implementation = oap.application.KernelLinkImplementationsTest.TestCLinks
-    parameters.reference = modules.this.link1
+    parameters.reference = <modules.this.link1>
   }
   
   link1 {
     implementation = oap.application.KernelLinkImplementationsTest.TestCLink
-    link.linkingPhaseTestLink = modules.this.links
+    link.linkingPhaseTestLink = <modules.this.links>
   }
   
   link2 {
     implementation = oap.application.KernelLinkImplementationsTest.TestCLink
-    link.references = modules.this.links
-    parameters.reference = modules.this.link1
+    link.references = <modules.this.links>
+    parameters.reference = <modules.this.link1>
   }
 }
