--- a/oap-application/oap-application-test/src/test/resources/oap/application/KernelLinkImplementationsTest/field-reference-constructor.conf
+++ b/oap-application/oap-application-test/src/test/resources/oap/application/KernelLinkImplementationsTest/field-reference-constructor.conf
@@ -4,7 +4,7 @@ services {
   m {
     implementation = oap.application.KernelLinkImplementationsTest.FieldReferenceFinal
     parameters {
-      ti = modules.this.ti1
+      ti = <modules.this.ti1>
     }
   }
 
