--- a/oap-application/oap-application-test/src/test/resources/oap/application/KernelLinkImplementationsTest/field-reference.conf
+++ b/oap-application/oap-application-test/src/test/resources/oap/application/KernelLinkImplementationsTest/field-reference.conf
@@ -12,7 +12,7 @@
     ti1 {
       implementation = oap.application.KernelLinkImplementationsTest.TestInterfaceImpl1
       link {
-        ti = modules.this.m
+        ti = <modules.this.m>
       }
     }
   }
