--- a/oap-application/oap-application-test/src/test/resources/oap/application/KernelLinkImplementationsTest/field-references-unknown-interface.conf
+++ b/oap-application/oap-application-test/src/test/resources/oap/application/KernelLinkImplementationsTest/field-references-unknown-interface.conf
@@ -11,7 +11,7 @@
     ti1 {
       implementation = oap.application.KernelLinkImplementationsTest.TestInterfaceImpl1
       link {
-        tis = modules.this.m
+        tis = <modules.this.m>
       }
       enabled = false
     }
