--- a/oap-application/oap-application-test/src/test/resources/oap/application/KernelProfileTest/module6.conf
+++ b/oap-application/oap-application-test/src/test/resources/oap/application/KernelProfileTest/module6.conf
@@ -11,7 +11,7 @@ services {
     profile = run
     implementation = "oap.application.KernelProfileTest$TestContainer"
     parameters {
-      beanName = modules.this.profile
+      beanName = <modules.this.profile>
     }
   }
   profile1 {
@@ -19,7 +19,7 @@ services {
     profile = run
     implementation = "oap.application.KernelProfileTest$TestProfile1"
     parameters {
-      profile1 = modules.this.profile-11
+      profile1 = <modules.this.profile-11>
     }
   }
   profile2 {
