--- a/oap-application/oap-application-test/src/test/resources/oap/application/KernelServiceNameTest/modules/servicename.conf
+++ b/oap-application/oap-application-test/src/test/resources/oap/application/KernelServiceNameTest/modules/servicename.conf
@@ -3,11 +3,11 @@
   services {
     field {
       implementation = oap.application.KernelServiceNameTest.TestServiceNameField
-      parameters.serviceName = servics.self.name
+      parameters.serviceName = <services.self.name>
     }
     setter {
       implementation = oap.application.KernelServiceNameTest.TestServiceNameFSetter
-      parameters.serviceName = services.self.name
+      parameters.serviceName = <services.self.name>
     }
   }
 }
