--- a/oap-application/oap-application-test/src/test/resources/oap/application/remote/RemoteTest/module.conf
+++ b/oap-application/oap-application-test/src/test/resources/oap/application/remote/RemoteTest/module.conf
@@ -20,7 +20,7 @@ services {
     implementation = oap.application.remote.RemoteClient
     remote {
       url = "http://localhost:"${HTTP_PORT}"/remote/"
-      name = modules.oap-module-with-remoting.remote-service
+      name = <modules.oap-module-with-remoting.remote-service>
       serialization = JSON
       retry = 5
     }
@@ -31,7 +31,7 @@ services {
     implementation = oap.application.remote.RemoteClient
     remote {
       url = "http://localhost:0/remote/"
-      name = modules.oap-module-with-remoting.remote-service
+      name = <modules.oap-module-with-remoting.remote-service>
       serialization = JSON
     }
   }
