--- a/oap-mail/oap-mail/src/main/resources/META-INF/oap-module.conf
+++ b/oap-mail/oap-mail/src/main/resources/META-INF/oap-module.conf
@@ -7,7 +7,7 @@ services {
     name = oap-mail-transport
     implementation = oap.mail.SmtpTransport
     parameters {
-      authenticator = modules.this.oap-mail-password-authenticator
+      authenticator = <modules.this.oap-mail-password-authenticator>
     }
   }
 
@@ -16,7 +16,7 @@ services {
     name = oap-mail-transport
     implementation = oap.mail.TransportMock
     parameters {
-      authenticator = modules.this.oap-mail-password-authenticator
+      authenticator = <modules.this.oap-mail-password-authenticator>
     }
   }
 
@@ -25,8 +25,8 @@ services {
   oap-mail-mailman {
     implementation = oap.mail.Mailman
     parameters {
-      transport = modules.this.oap-mail-transport
-      queue = modules.this.oap-mail-queue
+      transport = <modules.this.oap-mail-transport>
+      queue = <modules.this.oap-mail-queue>
     }
     supervision {
       schedule = true
