--- a/oap-message/src/test/resources/oap/message/MessageServerTest/oap-module.conf
+++ b/oap-message/src/test/resources/oap/message/MessageServerTest/oap-module.conf
@@ -12,6 +12,6 @@ services {
     parameters {
       messageType = 12
     }
-    link.listeners = modules.oap.oap-http-message-handler
+    link.listeners = <modules.oap.oap-http-message-handler>
   }
 }
