--- a/oap-stdlib/src/main/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.conf
@@ -67,10 +67,10 @@ services {
       alwaysSetKeepAlive = true
 
       handlers = [
-        modules.this.keepalive-requests-handler
-        modules.this.nio-bandwidth-handler
-        modules.this.nio-compression-handler
-        modules.this.blocking-read-timeout-handler
+        <modules.this.keepalive-requests-handler>
+        <modules.this.nio-bandwidth-handler>
+        <modules.this.nio-compression-handler>
+        <modules.this.blocking-read-timeout-handler>
       ]
     }
     supervision.supervise = true
@@ -80,7 +80,7 @@ services {
     profile = http
     implementation = oap.http.server.nio.health.HealthHttpHandler
     parameters {
-      server = modules.this.oap-http-server
+      server = <modules.this.oap-http-server>
       prefix = /healtz
       port = httpprivate
       providers = []
@@ -96,7 +96,7 @@ services {
     ]
     implementation = oap.message.MessageHttpHandler
     parameters {
-      server = modules.this.oap-http-server
+      server = <modules.this.oap-http-server>
       port = httpprivate
       clientHashCacheSize = 1024
       hashTtl = 6h
@@ -138,10 +138,10 @@ services {
       remoting
     ]
     parameters {
-      server = modules.this.oap-http-server
+      server = <modules.this.oap-http-server>
       context = /remote/
       serialization = DEFAULT
-      kernel = kernel.self
+      kernel = <kernel.self>
       port = httpprivate
     }
     supervision.supervise = true
@@ -152,7 +152,7 @@ services {
     implementation = oap.prometheus.PrometheusExporter
     parameters {
       port = httpprivate
-      server = modules.this.oap-http-server
+      server = <modules.this.oap-http-server>
       uuid = 18888a3e-2986-4431-98ed-437cefda5e86
     }
   }
