--- a/oap-ws/oap-ws-admin-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/oap-ws-admin-ws/src/main/resources/META-INF/oap-module.conf
@@ -12,7 +12,7 @@ services {
   ws-jpath {
     implementation = oap.ws.admin.JPathWS
     parameters {
-      kernel: kernel.self
+      kernel: <kernel.self>
     }
     ws-service {
       path = system/admin/jpath
