--- a/oap-ws/oap-ws-api-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/oap-ws-api-ws/src/main/resources/META-INF/oap-module.conf
@@ -4,7 +4,7 @@ services {
   api-ws {
     implementation = oap.ws.api.ApiWS
     parameters {
-      webServices = modules.oap-ws.oap-ws-webservices
+      webServices = <modules.oap-ws.oap-ws-webservices>
     }
     ws-service.path = system/api
   }
