--- a/oap-ws/oap-ws-file-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/oap-ws-file-ws/src/main/resources/META-INF/oap-module.conf
@@ -6,7 +6,7 @@ services {
   oap-ws-file {
     implementation = oap.ws.file.FileWS
     parameters {
-      bucketManager = modules.this.oap-ws-file-bucket-manager
+      bucketManager = <modules.this.oap-ws-file-bucket-manager>
     }
     ws-service.path = file
   }
