--- a/oap-ws/oap-ws-sso-api/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/oap-ws-sso-api/src/main/resources/META-INF/oap-module.conf
@@ -5,7 +5,7 @@ dependsOn = [
 services {
   oap-ws-sso-roles {
     implementation = oap.ws.sso.SecurityRoles
-    parameters.provider = modules.oap-ws-sso-api-roles.oap-ws-sso-roles-provider
+    parameters.provider = <modules.oap-ws-sso-api-roles.oap-ws-sso-roles-provider>
   }
 
   jwt-token-generator {
@@ -23,7 +23,7 @@ services {
     profile = ws-security
     implementation = oap.ws.sso.interceptor.ApiKeyInterceptor
     parameters {
-      authenticator = modules.oap-ws-sso.oap-ws-sso-authenticator
+      authenticator = <modules.oap-ws-sso.oap-ws-sso-authenticator>
     }
   }
 
@@ -41,7 +41,7 @@ services {
       parameters {
         secret = <change me>
         issuer = <change me>
-        roles = modules.this.oap-ws-sso-roles
+        roles = <modules.this.oap-ws-sso-roles>
       }
   }
 }
