--- a/oap-ws/oap-ws-sso/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/oap-ws-sso/src/main/resources/META-INF/oap-module.conf
@@ -15,9 +15,9 @@ services {
   oap-ws-sso-authenticator {
     implementation = oap.ws.sso.JwtUserAuthenticator
     parameters {
-      userProvider =  modules.this.oap-ws-sso-user-provider
-      jwtTokenGenerator = modules.oap-ws-sso-api.jwt-token-generator
-      jwtExtractor = modules.oap-ws-sso-api.oap-ws-sso-token-extractor
+      userProvider =  <modules.this.oap-ws-sso-user-provider>
+      jwtTokenGenerator = <modules.oap-ws-sso-api.jwt-token-generator>
+      jwtExtractor = <modules.oap-ws-sso-api.oap-ws-sso-token-extractor>
     }
   }
 
@@ -29,9 +29,9 @@ services {
    implementation = oap.ws.sso.interceptor.JWTSecurityInterceptor
    name = oap-ws-sso-jwt-security-interceptor
    parameters {
-        jwtExtractor = modules.oap-ws-sso-api.oap-ws-sso-token-extractor
-        userProvider = modules.this.oap-ws-sso-user-provider
-        roles = modules.oap-ws-sso-api.oap-ws-sso-roles
+        jwtExtractor = <modules.oap-ws-sso-api.oap-ws-sso-token-extractor>
+        userProvider = <modules.this.oap-ws-sso-user-provider>
+        roles = <modules.oap-ws-sso-api.oap-ws-sso-roles>
    }
   }
 }
