--- a/oap-ws/oap-ws-test/src/test/resources/META-INF/oap-module.conf
+++ b/oap-ws/oap-ws-test/src/test/resources/META-INF/oap-module.conf
@@ -76,7 +76,7 @@ services {
   vpj {
     implementation = oap.ws.validate.ValidatePartialJsonTest.TestWS
     parameters {
-      bean = modules.oap-ws-validate-test.test-ws-bean
+      bean = <modules.oap-ws-validate-test.test-ws-bean>
     }
     ws-service.path = vpj
   }
