--- a/oap-ws/oap-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/oap-ws/src/main/resources/META-INF/oap-module.conf
@@ -13,9 +13,9 @@ services {
   oap-ws-webservices {
     implementation = oap.ws.WebServices
     parameters {
-      kernel: kernel.self
-      server: modules.oap.oap-http-server
-      sessionManager: modules.this.session-manager
+      kernel: <kernel.self>
+      server: <modules.oap.oap-http-server>
+      sessionManager: <modules.this.session-manager>
     }
     supervision.supervise: true
   }
