--- a/oap-application/oap-application-test/src/test/resources/oap/application/KernelLinkImplementationsTest/field-references2.conf
+++ b/oap-application/oap-application-test/src/test/resources/oap/application/KernelLinkImplementationsTest/field-references2.conf
@@ -4,18 +4,18 @@
   services {
     ti1 {
       implementation = oap.application.KernelLinkImplementationsTest.TestInterfaceImpl1
-      link.tis = modules.field-references.m
+      link.tis = <modules.field-references.m>
       supervision.supervise = true
     }
     ti2 {
       implementation = oap.application.KernelLinkImplementationsTest.TestInterfaceImpl2
-      link.tis = modules.field-references.m
+      link.tis = <modules.field-references.m>
       enabled = false
       supervision.supervise = true
     }
     ti3 {
       implementation = oap.application.KernelLinkImplementationsTest.TestInterfaceImpl3
-      link.tis = modules.field-references.m
+      link.tis = <modules.field-references.m>
       supervision.supervise = true
     }
   }
