--- a/oap-application/oap-application-test/src/test/resources/oap/application/KernelProfileTest/module3.conf
+++ b/oap-application/oap-application-test/src/test/resources/oap/application/KernelProfileTest/module3.conf
@@ -15,7 +15,7 @@ services {
   container {
     implementation = "oap.application.KernelProfileTest$TestContainer"
     parameters {
-      beanName = modules.this.bean-name
+      beanName = <modules.this.bean-name>
     }
   }
 }
