--- a/oap-ws/oap-ws-openapi-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/oap-ws-openapi-ws/src/main/resources/META-INF/oap-module.conf
@@ -19,15 +19,15 @@ services {
   openapi {
     implementation = oap.ws.openapi.Openapi
     parameters {
-      webServices = modules.oap-ws.oap-ws-webservices
-      info = modules.this.openapi-info
+      webServices = <modules.oap-ws.oap-ws-webservices>
+      info = <modules.this.openapi-info>
     }
   }
 
   openapi-ws {
     implementation = oap.ws.openapi.OpenapiWS
     parameters {
-      openapi = modules.this.openapi
+      openapi = <modules.this.openapi>
     }
     ws-service.path = system/openapi
   }
